Fixed rogue scrollbar in the vehicles Description editor.

--- a/src/scss/partials/_actor.scss
+++ b/src/scss/partials/_actor.scss
@@ -124,7 +124,6 @@
 .editor {
   display: flex;
   flex-direction: column;
-  height: calc(100% - 1.3125rem);
 
   .editor-edit {
     background: transparent;
